--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node dist/index.js\""
+    "start": "NODE_ENV=production tsc-watch --onSuccess \"node dist/index.js\""
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/tanafc/tfg-backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "tsc-watch": "^6.0.0"
   },
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongodb": "^4.12.1",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.9.0"
   }
 }
