--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
   },
   "homepage": "https://github.com/tanafc/tfg-backend#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^9.0.1",
     "tsc-watch": "^6.0.0"
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.12.1",
     "mongoose": "^6.9.0"
   }
