--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/supertest": "^2.0.12",
@@ -29,10 +30,10 @@
     "mocha": "^10.2.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
-    "tsc-watch": "^6.0.0"
+    "tsc-watch": "^6.0.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@types/express": "^4.17.14",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
