--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  MONGO_DB_URI_TEST: ${{ secrets.MONGO_DB_URI_TEST }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
