--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production tsc-watch --onSuccess \"node dist/index.js\"",
-    "test": "NODE_ENV=test mocha --exit"
+    "test": "NODE_ENV=test mocha --timeout 10000 --exit"
   },
   "repository": {
     "type": "git",
