--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     env:
       MONGO_DB_URI: ${{ vars.MONGO_DB_URI }}
       MONGO_DB_URI_TEST: ${{ vars.MONGO_DB_URI_TEST }}
+      ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
