--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production tsc-watch --onSuccess \"node dist/index.js\"",
-    "test": "NODE_ENV=test mocha --timeout 10000 --exit"
+    "test": "NODE_ENV=test mocha --timeout 10000 --exit",
+    "watch": "NODE_ENV=test mocha --timeout 10000 --watch --exit"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,6 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.3.4",
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
@@ -35,7 +35,6 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
