--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": true,
-    "noImplicitReturns": true
-  }
+    "noImplicitReturns": true,
+    "typeRoots": [
+      "@types",
+      "./node_modules/@types"
+    ],
+  },
 }
